# snowflake

./: .editorconfig  .gitattributes  .gitignore  .pnp.cjs  .pre-commit-config.yaml  .prettierrc.cjs  .yarnrc.yml  README.md  eslint.config.mjs  package.json  pom.xml  prettier.config.mjs  pyproject.toml  tsconfig.json  turbo.json  yarn.config.cjs
app/bitvolt/: README.md  index.html  jest.config.js  package.json  tsconfig.json
app/bitvolt/src/: App.tsx  Router.tsx  index.css  main.tsx  store.ts
app/simcloud/: index.html  main.cc
app/simcloud/src/: connection.cc  connection.hh  server.cc  server.hh
apps/act/: eslint.config.js  index.html  package.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.js
apps/act/src/: App.tsx  Router.tsx  (+2 more)
apps/actworker/: go.mod  go.sum  main.go
apps/bitvolt/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.base.json  tsconfig.json
apps/iam/: Dockerfile  requirements.txt
java/idms/: compose.yml  package.json  pom.xml  vite.config.js
pkg/core-auth/: README.md  package.json  rollup.config.js  tsconfig.json  vite.config.js
pkg/eslint-config/: index.d.ts  index.js  package.json  react.js
pkg/matex/: README.md  jest.config.js  jest.setup.js  package.json  rollup.config.js  tsconfig.json  vite.config.js
pkg/react-utils/: README.md  jest.setup.js  package.json  tsconfig.json
pkg/shagen/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.mjs
pkg/typescript-config/: package.json  tsconfig.base.json  tsconfig.react.json
scripts/: vite-build.mjs
(+96 files in other folders)
